--- a/day00/ex03/app/src/main/res/layout/activity_main.xml
+++ b/day00/ex03/app/src/main/res/layout/activity_main.xml
@@ -20,21 +20,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header">
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/line1"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/line1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ellipsize="none"
-                android:lines="1"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:textAlignment="textEnd"
-                android:textSize="45sp" />
-        </LinearLayout>
+            android:layout_height="wrap_content"
+            android:ellipsize="none"
+            android:lines="1"
+            android:maxLines="1"
+            android:singleLine="true"
+            android:layout_gravity="right"
+            android:textSize="45sp" />
     </HorizontalScrollView>
 
     <TextView
