--- a/day00/ex03/app/src/main/res/layout/activity_main.xml
+++ b/day00/ex03/app/src/main/res/layout/activity_main.xml
@@ -24,12 +24,12 @@
             android:id="@+id/line1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:ellipsize="none"
             android:lines="1"
             android:maxLines="1"
             android:singleLine="true"
-            android:layout_gravity="right"
-            android:textSize="45sp" />
+            android:textSize="35sp" />
     </HorizontalScrollView>
 
     <TextView
@@ -37,12 +37,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
+        android:autoSizeMaxTextSize="60sp"
+        android:autoSizeMinTextSize="20sp"
+        android:autoSizeTextType="uniform"
         android:lines="1"
         android:maxLines="1"
         android:textAlignment="textEnd"
-        android:textSize="60sp"
+        android:textSize="45sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/header" />
 
