--- a/day01/mobileWeatherApp/app/src/main/res/layout/fragment_weekly.xml
+++ b/day01/mobileWeatherApp/app/src/main/res/layout/fragment_weekly.xml
@@ -1,17 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Weekly">
+    android:gravity="center"
+    android:orientation="vertical"
+    tools:context=".pageviewer.Today">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/weekly"
-        android:textSize="50sp"
         android:textAlignment="center"
-        android:layout_gravity="center"
-        />
+        android:textSize="40sp"/>
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/location_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="50sp" />
+
+</LinearLayout>
