--- a/day02/mobileWeatherApp/app/src/main/res/layout/item_city_suggestion.xml
+++ b/day02/mobileWeatherApp/app/src/main/res/layout/item_city_suggestion.xml
@@ -12,4 +12,25 @@
         android:textSize="14sp"
         android:textColor="#000000" />
 
+    <TextView
+        android:id="@+id/cityOption1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/cityOption2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#000000" />
+
+    <TextView
+        android:id="@+id/cityOption3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="14sp"
+        android:textColor="#000000" />
+
 </LinearLayout>
