suggestion work with predefined list, save before API integration

--- a/day02/mobileWeatherApp/app/src/main/res/layout/item_city_suggestion.xml
+++ b/day02/mobileWeatherApp/app/src/main/res/layout/item_city_suggestion.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="8dp">
 
     <TextView
@@ -10,27 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="14sp"
-        android:textColor="#000000" />
-
-    <TextView
-        android:id="@+id/cityOption1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="#000000" />
-
-    <TextView
-        android:id="@+id/cityOption2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="#000000" />
-
-    <TextView
-        android:id="@+id/cityOption3"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:textColor="#000000" />
+        android:textColor="@color/black" />
 
 </LinearLayout>
