--- a/day02/mobileWeatherApp/app/src/main/res/layout/fragment_currently.xml
+++ b/day02/mobileWeatherApp/app/src/main/res/layout/fragment_currently.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="top|center"
     android:orientation="vertical"
-    tools:context=".pageviewer.Today">
+    tools:context=".pageviewer.Currently">
 
     <TextView
         android:id="@+id/textView"
@@ -16,10 +16,34 @@
         android:textSize="40sp"/>
 
     <TextView
-        android:id="@+id/location_text"
+        android:id="@+id/city"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textSize="50sp" />
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/region"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/country"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/temperature"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20sp" />
+    <TextView
+        android:id="@+id/wind"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:textSize="20sp" />
 
 </LinearLayout>
