back up before changeng GPS location from Fused to Android's LocationManager

--- a/day02/mobileWeatherApp/app/src/main/res/layout/fragment_today.xml
+++ b/day02/mobileWeatherApp/app/src/main/res/layout/fragment_today.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
@@ -8,13 +9,13 @@
     android:orientation="vertical"
     tools:context=".pageviewer.Today">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/today"
-        android:textAlignment="center"
-        android:textSize="40sp"/>
+<!--    <TextView-->
+<!--        android:id="@+id/textView"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="@string/today"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textSize="40sp" />-->
 
     <TextView
         android:id="@+id/city"
@@ -35,37 +36,16 @@
         android:textAlignment="center"
         android:textSize="20sp" />
 
-<!--    <LinearLayout-->
-<!--        android:id="@+id/linePerHour"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="horizontal"-->
-<!--        >-->
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
-<!--        <TextView-->
-<!--            android:id="@+id/time"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:textAlignment="center"-->
-<!--            android:textSize="20sp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/temperature"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:textAlignment="center"-->
-<!--            android:textSize="20sp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/wind"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_weight="1"-->
-<!--            android:textAlignment="center"-->
-<!--            android:textSize="20sp" />-->
-
-<!--    </LinearLayout>-->
+        <LinearLayout
+            android:id="@+id/innerLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
+    </ScrollView>
 
 </LinearLayout>
