--- a/day02/mobileWeatherApp/app/src/main/res/layout/fragment_weekly.xml
+++ b/day02/mobileWeatherApp/app/src/main/res/layout/fragment_weekly.xml
@@ -27,5 +27,11 @@
         android:textAlignment="center"
         android:textSize="20sp" />
 
+    <LinearLayout
+        android:id="@+id/innerLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" />
+
 
 </LinearLayout>
