day03 currently page is set up, todo icons and searchbar colors

--- a/day03/mobileWeatherApp/app/src/main/res/values/colors.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="red">#811331</color>
     <color name="ivory">#FAEADCDC</color>
     <color name="grey">#FF4F4A4A</color>
+    <color name="light_blue">#5C9EBC</color>
 
 
 </resources>
