--- a/day03/mobileWeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/background"
-        android:alpha="0.5"/>
-
+        android:src="@drawable/background" />
+<!--    android:alpha="0.5"-->
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
