--- a/day03/mobileWeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/activity_main.xml
@@ -8,23 +8,31 @@
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/backgroundImage"
+        android:id="@+id/background"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/background" />
-<!--    android:alpha="0.5"-->
+        android:src="@drawable/bg_image" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#191D31">
+        android:background="@drawable/background_border"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_marginTop="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp" >
 
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/topToolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize">
+<!--        <androidx.appcompat.widget.Toolbar-->
+<!--            android:id="@+id/topToolbar"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="5dp"-->
+<!--            android:layout_marginStart="10dp"-->
+<!--            android:layout_marginEnd="10dp"-->
+<!--            android:background="@drawable/background_border"-->
+<!--            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -32,51 +40,37 @@
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
 
-<!--                <com.google.android.material.textfield.TextInputLayout-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="wrap_content"-->
-<!--                    android:layout_weight="5"-->
-<!--                    android:hint="@string/hintSearchView"-->
-<!--                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">-->
-
-<!--                    <com.google.android.material.textfield.TextInputEditText-->
-<!--                        android:id="@+id/searchGeoText"-->
-<!--                        android:layout_width="match_parent"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:textColorHint="#808080"-->
-<!--                        android:textColor="#FFFFFF"-->
-<!--                        android:singleLine="true"/>-->
-<!--                </com.google.android.material.textfield.TextInputLayout>-->
-
                 <SearchView
                     android:id="@+id/searchGeoText"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="5"
+                    android:closeIcon="@drawable/car_ui_icon_close"
                     android:queryHint="Search location..." />
-<!--                android:iconifiedByDefault="false" = searchView.onActionViewExpanded()-->
+                <!--                android:iconifiedByDefault="false" = searchView.onActionViewExpanded()-->
 
                 <View
                     android:layout_width="1dp"
-                    android:layout_height="40dp"
-                    android:background="@color/ivory"
+                    android:layout_height="35dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"/>
+                    android:layout_marginEnd="8dp"
+                    android:background="@color/ivory" />
 
                 <ImageButton
                     android:id="@+id/searchGeoButton"
-                    android:layout_width="48dp"
-                    android:layout_height="48dp"
+                    android:layout_width="35dp"
+                    android:layout_height="35dp"
                     android:layout_gravity="center_vertical"
                     android:background="?attr/selectableItemBackgroundBorderless"
                     android:contentDescription="@string/getCurrentLocation"
                     android:onClick="requestLocation"
                     android:src="@drawable/ic_location_near_foreground"
-                    app:tint="#FAEADCDC" />
+                    app:tint="@color/ivory" />
 
             </LinearLayout>
-        </androidx.appcompat.widget.Toolbar>
+<!--        </androidx.appcompat.widget.Toolbar>-->
     </com.google.android.material.appbar.AppBarLayout>
+
 
 
     <FrameLayout
@@ -110,6 +104,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:background="@color/black"
+        android:theme="@style/Theme.Material3.Dark.NoActionBar"
+        app:itemIconTint="@color/ivory"
+        app:itemTextColor="@color/ivory"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
