--- a/day03/mobileWeatherApp/app/src/main/res/layout/fragment_currently.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/fragment_currently.xml
@@ -5,6 +5,7 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context=".pageviewer.Currently">
 
     <TextView
@@ -25,10 +26,11 @@
         android:id="@+id/region"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
         android:textAlignment="center"
-        android:textColor="@color/light_blue"
+        android:textColor="#0EAC95"
         android:textSize="25sp"
+        android:maxLines="2"
+        android:ellipsize="end"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/city" />
@@ -38,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#8BC34A"
+        android:textColor="#10EC9F"
         android:textSize="60sp"
         android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/region"
@@ -60,28 +62,49 @@
 
     <ImageView
         android:id="@+id/weatherIcon"
-        android:src="@drawable/car_ui_icon_error"
-        android:layout_height="100dp"
-        android:layout_width="100dp"
+        android:layout_height="150dp"
+        android:layout_width="150dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintTop_toBottomOf="@id/weatherDescription"
         app:layout_constraintBottom_toTopOf="@id/wind"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="weather illustration" />
-
+        android:contentDescription="@string/weather_illustration" />
 
     <TextView
         android:id="@+id/wind"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="100dp"
-        android:textAlignment="center"
-        android:textSize="25sp"
+        android:gravity="center_vertical"
         android:textColor="@color/ivory"
+        android:textSize="25sp"
+        app:layout_constraintTop_toBottomOf="@id/weatherIcon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/weatherIcon" />
+        app:layout_constraintStart_toStartOf="parent"/>
+
+<!--    <LinearLayout-->
+<!--        android:id="@+id/linearLayout"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center_vertical"-->
+<!--        android:orientation="horizontal"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/weatherIcon"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent">-->
+
+<!--        <ImageView-->
+<!--            android:id="@+id/windIcon"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:contentDescription="@string/wind_icon" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/wind"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textSize="25sp"-->
+<!--            android:textColor="@color/ivory"/>-->
+
+<!--    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
