--- a/day03/mobileWeatherApp/app/src/main/res/values/colors.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="ivory">#FAEADCDC</color>
     <color name="grey">#FF4F4A4A</color>
     <color name="light_blue">#5C9EBC</color>
+    <color name="transparent_white">#25FFFFFF</color>
 
 
 </resources>
