--- a/day03/mobileWeatherApp/app/src/main/res/layout/fragment_currently.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/fragment_currently.xml
@@ -5,7 +5,6 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".pageviewer.Currently">
 
     <TextView
@@ -65,11 +64,11 @@
         android:layout_height="150dp"
         android:layout_width="150dp"
         android:layout_marginBottom="100dp"
+        android:contentDescription="@string/weather_illustration"
         app:layout_constraintTop_toBottomOf="@id/weatherDescription"
         app:layout_constraintBottom_toTopOf="@id/wind"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/weather_illustration" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/wind"
@@ -81,30 +80,5 @@
         app:layout_constraintTop_toBottomOf="@id/weatherIcon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
-
-<!--    <LinearLayout-->
-<!--        android:id="@+id/linearLayout"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:gravity="center_vertical"-->
-<!--        android:orientation="horizontal"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/weatherIcon"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent">-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/windIcon"-->
-<!--            android:layout_height="50dp"-->
-<!--            android:layout_width="50dp"-->
-<!--            android:contentDescription="@string/wind_icon" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/wind"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textSize="25sp"-->
-<!--            android:textColor="@color/ivory"/>-->
-
-<!--    </LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
