--- a/day03/mobileWeatherApp/app/src/main/res/layout/fragment_today.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/fragment_today.xml
@@ -13,20 +13,24 @@
         android:id="@+id/city"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        android:textStyle="bold"
+        android:maxLines="1"
+        android:ellipsize="end" />
+
     <TextView
         android:id="@+id/region"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textSize="20sp" />
-    <TextView
-        android:id="@+id/country"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:textSize="20sp" />
+        android:textColor="#0EAC95"
+        android:textSize="25sp"
+        android:maxLines="2"
+        android:ellipsize="end" />
+
 
     <ScrollView
         android:id="@+id/scrollView"
@@ -39,7 +43,31 @@
             android:id="@+id/innerLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="horizontal" >
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <ImageView
+                android:id="@+id/weatherIcon"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:contentDescription="@string/weather_illustration"/>
+
+            <TextView
+                android:id="@+id/temperature"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/wind"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center_vertical" />
+
+        </LinearLayout>
     </ScrollView>
 
 </LinearLayout>
