--- a/day03/mobileWeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/bg_image" />
+        android:src="@drawable/bg_image"
+        android:contentDescription="@string/background_photo"/>
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -108,6 +109,7 @@
         android:theme="@style/Theme.Material3.Dark.NoActionBar"
         app:itemIconTint="@color/ivory"
         app:itemTextColor="@color/ivory"
+        app:layout_constraintTop_toBottomOf="@id/fragmentContainer"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
