--- a/day03/mobileWeatherApp/app/src/main/res/layout/item_hourly_forecast.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/item_hourly_forecast.xml
@@ -2,29 +2,36 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
+    android:gravity="center"
     android:padding="8dp">
 
     <TextView
         android:id="@+id/timeStamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="17sp"/>
+        android:textSize="20sp" />
 
     <ImageView
         android:id="@+id/weatherIcon"
-        android:layout_height="70dp"
-        android:layout_width="70dp" />
+        android:layout_height="50dp"
+        android:layout_width="50dp"
+        android:paddingTop="15dp"
+        android:contentDescription="@string/weather_illustration" />
 
     <TextView
         android:id="@+id/temperatureHour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp" />
+        android:textSize="25sp"
+        android:textStyle="bold"
+        android:textColor="@color/light_green"
+        android:paddingTop="15dp" />
 
     <TextView
         android:id="@+id/windHour"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="13sp" />
+        android:textSize="13sp"
+        android:paddingTop="15dp"/>
 
 </LinearLayout>
