--- a/day03/mobileWeatherApp/app/src/main/res/values/colors.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/values/colors.xml
@@ -7,7 +7,11 @@
     <color name="ivory">#FAEADCDC</color>
     <color name="grey">#FF4F4A4A</color>
     <color name="light_blue">#5C9EBC</color>
-    <color name="transparent_white">#25FFFFFF</color>
+    <color name="light_green">#10EC9F</color>
+    <color name="transparent_white">#1AFFFFFF</color>
+    <color name="transparent_orange">#14FF9800</color>
+    <color name="transparent_yellow">#0DEAC02A</color>
+    <color name="orange">#FF5722</color>
 
 
 </resources>
