--- a/day03/mobileWeatherApp/app/src/main/res/layout/fragment_currently.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/fragment_currently.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#0EAC95"
+        android:textColor="@color/turquoise_region"
         android:textSize="25sp"
         android:maxLines="2"
         android:ellipsize="end"
