--- a/day03/mobileWeatherApp/app/src/main/res/layout/fragment_today.xml
+++ b/day03/mobileWeatherApp/app/src/main/res/layout/fragment_today.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="center"
-        android:textColor="#0EAC95"
+        android:textColor="@color/turquoise_region"
         android:textSize="25sp"
         android:maxLines="2"
         android:ellipsize="end" />
@@ -35,8 +35,7 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/lineChart"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"
+        android:layout_height="0dp"
         android:layout_marginTop="30dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -46,7 +45,7 @@
     <LinearLayout
         android:id="@+id/innerLayout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="2"
         android:orientation="horizontal"
         android:gravity="center">
